[master][update project to java 21 and springboot 3.2.7]