@@ -3,13 +3,9 @@ package br.com.springkafka.controller;
 import br.com.springkafka.People;
 import br.com.springkafka.dto.PeopleDTO;
 import br.com.springkafka.producer.PeopleProducer;
-import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -20,11 +16,10 @@ import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/peoples")
-@AllArgsConstructor(onConstructor = @__(@Autowired))
+@RequiredArgsConstructor
 public class PeopleController {
 
-  @Autowired
-  private PeopleProducer peopleProducer;
+  private final PeopleProducer peopleProducer;
 
   @PostMapping
   public ResponseEntity<Void> sendMessage(@RequestBody PeopleDTO peopleDTO){
@@ -32,13 +27,14 @@ public class PeopleController {
 
     var message = People.newBuilder()
             .setId(id)
-            .setName(peopleDTO.getName())
-            .setCpf(peopleDTO.getCpf())
-            .setBooks(peopleDTO.getBooks()
+            .setName(peopleDTO.name())
+            .setCpf(peopleDTO.cpf())
+            .setBooks(peopleDTO.books()
                     .stream()
                     .map(p -> (CharSequence) p)
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
+
     peopleProducer.sendMessage(message);
     return ResponseEntity.status(HttpStatus.CREATED).build();
   }
